atualiando readme
